--- a/index.html
+++ b/index.html
@@ -18,60 +18,60 @@
     <nav>
         <div id="navbar">
         <ul>
-            <a href="project.html"><img src="Skjermbilde 2024-01-24 kl. 13.50.10.png" alt=""></a>
+            <a href="index.html"><img src="bilder/Skjermbilde 2024-01-24 kl. 13.50.10.png" alt=""></a>
             <a href="4c/liste.html" target="_blank"><li>Liste</li></a>
-            <a href="project2.html"><li>Om meg</li></a>
-            <a><li>Link 3</li></a>
+            <a href="project2.html"><li>Prosjekter</li></a>
         </ul>
+
         </div>
     </nav>
-
       
-    </nav>
-    </div>
 
     <div id="main">
         <h1>Amna Saleem</h1>
-        <p>en liten tekst her: </p>
     </div>
     <div id="picture">
-        <img src="" alt="Bilde av Amna">
+        <img src="bilder/69E8F44F-2777-4158-976E-B14A5D0A344C.JPG" class="bilde" alt="Bilde av Amna">
     </div>
 
     <div id="linje"></div>
 
     <div class="wrapper">
         <text>
-            <h2>Tekst:</h2>
-            <p1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A ex dicta consectetur animi eos pariatur commodi? Facere molestiae nostrum quaerat tempora illo sint officiis, fugiat minus pariatur voluptatum officia. Ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia incidunt eligendi ratione quibusdam fuga ab rem illum cumque ullam in veniam sit perspiciatis, laboriosam maxime aspernatur magnam amet voluptatum veritatis!</p1>
+            <h2>Om meg:</h2>
+            <p>Noen kjenner meg som en elev, andre kjenner meg som en venn, for noen er jeg en søster og for andre er jeg er datter. Hei! Jeg heter Amna Saleem. Bli bedre kjent med meg ved hjelp av denne digitale portofølien.  </p>
+            <p>Som barn har jeg alltid hatt interesse i å lese bøker og drømme meg bort i det jeg leste om. Interessen i bøker var ikke bare en midlertidig hobby, det er derimot en hobby som har fulgt meg opp gjennom årene til den dagen i dag. Ikke bare er jeg veldig glad i å lese bøker, men jeg er også veldig glad i å bake på fritiden. Spesielt synes jeg det alltid er koselig å bake for familien min og søstrene mine. Jeg tilbringer mye av fritiden sammen med familien min og vennene mine, og er veldig glad i dem.</p>
         </text>
 
         <picture>
-            <img src="1f2a6139-65fb-4649-82c9-e8424ead6b2e.jpeg" alt="Bilde av himmelen">
+            <img src="bilder/dig_book_print_hero_1280x768.jpeg" alt="Bilde av bøker">
         </picture>
 
-        <picture2><img src="IMG_8545.jpeg" alt="Bilde av meg og søstrene mine"></picture2>
+        <picture2><img src="bilder/IMG_3043.JPG" alt="Bilde av meg og søstrene mine"></picture2>
 
         <text2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi veritatis, illo facilis soluta rerum aliquam asperiores ipsa fuga facere. Pariatur aperiam corporis officiis sequi? Dolores corporis eveniet perspiciatis similique laboriosam.</p>
+            <p>Jeg er født i år 2006, og er oppvokst og bosatt på Strømmen. Per nå er jeg en elev ved Lillestrøm videregående skole, og tar studiespesialisering men fordypning i realfag. Det siste året har jeg hatt innsikt i mange ulike fag slik som historie, økonomistyring, matte, fysikk og informasjonsteknologi. Et fag som jeg synes er annerledes og interessant er informasjonsteknologi, fordi vi har fått muligheten til å jobbe med ulike prosjekter. Trykk på «Prosjekter» i navbaren øverst👆🏼</p>
         </text2> 
     </div>
+    <div id="linje"></div>
 
-    <div class="litt info">
-        <h2></h2>
-        <p>kreativ</p>
-        <p>effektiv</p>
-        <p></p>
+    <div class="info">
+        <h2>Kort om meg</h2>
+        <p style = "background-color:#f4f1de; width: 25%;" >Kreativ</p>
+        <p style = "background-color:#f4f1de; width: 23%;">Effektiv</p>
+        <p style = "background-color:#f4f1de; width: 17%;">Avsvarsfull</p>
+        <p style = "background-color:#f4f1de; width: 20%;">Engasjert/motivert</p>
+
     </div>
 
     <div id="linje"></div>
     <footer>
         <ul>
-        <li>Kontaktinfo</li>
-            <li>telfon-nr: 91738595</li>
-            <li>e-post: 24amna04@gmail.com </li>
-            <li>Snap:amnas_24</li>
-            <li>Ig:aamnasaleem </li>
+        <li>Kontaktinfo:</li>
+            <li>Telelfon-nr: 91738595</li>
+            <li>E-post: 24amna04@gmail.com </li>
+            <li>Snapchat: amna-s24 <link rel="stylesheet" href="https://t.snapchat.com/4assfnQQ"></li>
+            <li>Instagram: aamnasaleem </li>
         </ul>   
     </footer>
 </body>
