--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div id="navbar">
         <ul>
             <a href="index.html"><img src="bilder/Skjermbilde 2024-01-24 kl. 13.50.10.png" alt=""></a>
-            <a href="4c/liste.html" target="_blank"><li>Liste</li></a>
             <a href="project2.html"><li>Prosjekter</li></a>
+            <a href="4c/liste.html" target="_blank"><li>Liste</li></a>
         </ul>
 
         </div>
@@ -57,20 +57,20 @@
 
     <div class="info">
         <h2>Kort om meg</h2>
-        <p style = "background-color:#f4f1de; width: 25%;" >Kreativ</p>
-        <p style = "background-color:#f4f1de; width: 23%;">Effektiv</p>
-        <p style = "background-color:#f4f1de; width: 17%;">Avsvarsfull</p>
-        <p style = "background-color:#f4f1de; width: 20%;">Engasjert/motivert</p>
+        <p style = "background-color:#f4f1de; width: 35%;" >Kreativ</p>
+        <p style = "background-color:#f4f1de; width: 33%;">Effektiv</p>
+        <p style = "background-color:#f4f1de; width: 27%;">Avsvarsfull</p>
+        <p style = "background-color:#f4f1de; width: 30%;">Engasjert/motivert</p>
 
     </div>
 
     <div id="linje"></div>
     <footer>
         <ul>
-        <li>Kontaktinfo:</li>
+        <li><u>Kontaktinfo:</u></li>
             <li>Telelfon-nr: 91738595</li>
             <li>E-post: 24amna04@gmail.com </li>
-            <li>Snapchat: amna-s24 <link rel="stylesheet" href="https://t.snapchat.com/4assfnQQ"></li>
+            <li>Snapchat: amna-s24</li>
             <li>Instagram: aamnasaleem </li>
         </ul>   
     </footer>
