--- a/project2.html
+++ b/project2.html
@@ -4,33 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="project2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <title>Project side 2</title>
 </head>
 <body>
-    <header>
-        <div class="burger-menu">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
+
+    <nav>
+        <div id="navbar">
+        <ul>
+            <a href="index.html"><img src="bilder/Skjermbilde 2024-01-24 kl. 13.50.10.png" alt=""></a>
+            <a href="project2.html"><li>Prosjekter</li></a>
+            <a href="4c/liste.html" target="_blank"><li>Liste</li></a>
+        </ul>
+
+        </div>
+    </nav>
+
+    
+    <div class="timeline">
+        <div class="container left-container">
+            <div class="text-box">
+                <h2>Miniprosjet</h2>
+                <small>oktober</small>
+                <p>Interesse</p>
+                <img src="bilder/Skjermbilde 2024-01-31 kl. 00.21.02.png" alt="Skjermbilde av Miniprosjet">
+                <span class="left-container-arrow"></span>
+            </div>
         </div>
 
-        <nav>
-            <div id="navbar">
-            <ul>
-                <a href="project.html"><img src="Skjermbilde 2024-01-24 kl. 13.50.10.png" alt=""></a>
-                <a href="4c/liste.html" target="_blank"><li>Liste</li></a>
-                <a href="project2.html"><li>Om meg</li></a>
-                <a><li>Link 3</li></a>
-            </ul>
+        <div class="container right-container">
+            <div class="text-box">
+                <h2>Miniprosjet_2</h2>
+                <small>november</small>
+                <p>Prosjet js/html</p>
+                <img src="bilder/Skjermbilde 2024-01-31 kl. 00.22.45.png" alt="Skjermbilde av prosjekt 2">
+                <span class="right-container-arrow"></span>
             </div>
-        </nav>
-    </header>
-    <div>
-        <h1>noe her </h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur labore doloremque illo expedita quibusdam reprehenderit ut eligendi nihil ducimus est nam, voluptatibus, rem minima, aperiam unde illum culpa voluptas laborum? Ipsum asperiores eum quidem nostrum natus maiores veniam ad, ullam nisi! Excepturi reiciendis pariatur obcaecati sint. Laborum hic inventore eaque..</p>
+        </div>
+
+        <div class="container left-container">
+            <div class="text-box">
+                <h2>Prosjekt 3 </h2>
+                <small>desember</small>
+                <p>Digital liste</p>
+                <img src="bilder/Skjermbilde 2024-01-31 kl. 00.24.06.png" alt="Skjermbilde av prosjekt 3">
+                <span class="left-container-arrow"></span>
+            </div>
+        </div>
+
+        <div class="container right-container">
+            <div class="text-box">
+                <h2>Prosjekt 4</h2>
+                <small>august</small>
+                <p>Portofølie</p>
+                <img src="bilder/Skjermbilde 2024-01-31 kl. 00.25.13.png" alt="Skjermbilde av prosjekt 4">
+                <span class="right-container-arrow"></span>
+            </div>
+        </div>
+
+        <div class="container left-container">
+            <div class="text-box">
+                <h2>Prosjekt 5</h2>
+                <small>-</small>
+                <p>Plantehuset</p>
+                <img src="bilder/Skjermbilde 2024-01-31 kl. 00.34.54.png" alt="Skjermbilde av prosjekt 5">
+                <span class="left-container-arrow"></span>
+            </div>
+        </div>
+
+        <div class="container right-container">
+            <div class="text-box">
+                <h2>Prosjekt 6</h2>
+                <small>-</small>
+                <p>Fag</p>
+                <img src="bilder/Skjermbilde 2024-01-31 kl. 00.37.41.png" alt="Skjermbilde av prosjekt 6">
+                <span class="right-container-arrow"></span>
+            </div>
+        </div>
     </div>
+
+   
+
 </body>
 </html>
