--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="wrapper">
         <text>
             <h2>Om meg:</h2>
-            <p>Noen kjenner meg som en elev, andre kjenner meg som en venn, for noen er jeg en søster og for andre er jeg er datter. Hei! Jeg heter Amna Saleem. Bli bedre kjent med meg ved hjelp av denne digitale portofølien.  </p>
+            <p>Noen kjenner meg som en elev, andre kjenner meg som en venn, for noen er jeg en søster og for andre er jeg er datter. Hei! Jeg heter Amna Saleem. Bli bedre kjent med meg ved hjelp av denne digitale portfolioen.  </p>
             <p>Som barn har jeg alltid hatt interesse i å lese bøker og drømme meg bort i det jeg leste om. Interessen i bøker var ikke bare en midlertidig hobby, det er derimot en hobby som har fulgt meg opp gjennom årene til den dagen i dag. Ikke bare er jeg veldig glad i å lese bøker, men jeg er også veldig glad i å bake på fritiden. Spesielt synes jeg det alltid er koselig å bake for familien min og søstrene mine. Jeg tilbringer mye av fritiden sammen med familien min og vennene mine, og er veldig glad i dem.</p>
         </text>
 
