--- a/project2.html
+++ b/project2.html
@@ -85,8 +85,16 @@
             </div>
         </div>
     </div>
-
+    <div id="linje"></div>
+    <footer>
+        <ul>
+        <li><u>Kontaktinfo:</u></li>
+            <li>Telelfon-nr: 91738595</li>
+            <li>E-post: 24amna04@gmail.com </li>
+            <li>Snapchat: amna-s24</li>
+            <li>Instagram: aamnasaleem </li>
+        </ul>   
+    </footer>
    
-
 </body>
 </html>
